[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/RestartMenu.gd" type="Script" id=1]
[ext_resource path="res://story/img/dialog2.png" type="Texture" id=2]
[ext_resource path="res://fonts/FifthCenturyCaps.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="RestartMenu" type="Control"]
margin_top = -435.0
margin_right = 1226.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 619.785, 211.08 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 610.413, 214.211 )
scale = Vector2( 0.536861, 0.571802 )
texture = ExtResource( 2 )

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -589.475
margin_top = -87.5395
margin_right = 571.525
margin_bottom = -13.5392
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../MainScreen")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.243137, 0.00392157, 1 )
text = "Restart from last checkpoint"
flat = true

[node name="MainScreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -586.957
margin_top = 0.591301
margin_right = 574.043
margin_bottom = 74.5916
focus_neighbour_top = NodePath("../RestartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.243137, 0.00392157, 1 )
text = "Back to title screen"
flat = true

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.71
margin_top = 89.5665
margin_right = 138.29
margin_bottom = 163.566
focus_neighbour_top = NodePath("../MainScreen")
focus_neighbour_bottom = NodePath("../RestartButton")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.243137, 0.00392157, 1 )
text = "Quit"
flat = true

[node name="CloseButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 775.166
margin_top = 262.819
margin_right = 1083.17
margin_bottom = 375.819
custom_fonts/font = SubResource( 1 )
text = "Close"
